--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   drift: ^2.30.1
   drift_flutter: ^0.2.8
   tuple: ^2.0.2
+  event_bus: ^2.0.1
 
 dev_dependencies:
   flutter_test:
