--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,12 @@ dependencies:
   drift_flutter: ^0.2.8
   tuple: ^2.0.2
   event_bus: ^2.0.1
+  sqlite3: ^2.9.4
+  sqlite3_flutter_libs: ^0.5.39
+  http: ^1.3.0
+  crypto: ^3.0.6
+  url_launcher: ^6.3.2
+  qr_flutter: ^4.1.0
 
 dev_dependencies:
   flutter_test:
