--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  openapi:
+    path: api
   provider: ^6.1.5+1
   flutter_dotenv: ^6.0.0
   path_provider: ^2.1.5
