--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,6 +89,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - ./.env
+    - assets/bg.jpg
+    - assets/logo-bri-terbaru.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -117,3 +119,9 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+  fonts:
+    - family: Digital7
+      fonts:
+        - asset: assets/fonts/Digital-7/digital-7-mono.ttf
+        - asset: assets/fonts/Digital-7/digital-7-mono-italic.ttf
+          style: italic
